--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  color: white;
 }
 
 body {
   min-height: 100vh;
-  background: #F0F4FF;
+  background: url('sa-mp-491.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .sidebar {
@@ -131,7 +135,7 @@ body {
   border: 2px solid #fff;
 }
 
-.user-profile h3 {
+.user-profile {
   font-size: 1rem;
   font-weight: 600;
 }
@@ -144,10 +148,11 @@ body {
 .user-detail {
   margin-left: 23px;
   white-space: nowrap;
+  color: black;
 }
 
 .sidebar:hover .user-account {
-  background: #fff;
+  background-color: rgba(128, 128, 128, 0.479);
   border-radius: 4px;
 }
 
@@ -164,12 +169,22 @@ body {
   
   .main-text h1 {
     font-size: 2.5rem;
-    color: #333;
+    color: white;
   }
   
   .main-text p {
-    font-size: 1.2rem;
-    color: #666;
+    font-size: 2rem;
+    color: grey;
+    font-weight: 900;
+    margin-top: 20px;
+  }
+
+  .headimg img {
+    width:80%;
+    height: auto;
+    border-radius: 10px;
+    border: 2px solid white;
+    box-shadow: 2px 2px 2px black;
   }
   
   .intro {
@@ -186,16 +201,42 @@ body {
 
 
     .intro {
-        padding-left: 17%;
-        font-size: 10px;
+        padding-left: 19%;
+        font-size: 11px;
     }
 
     .main-text h1 {
-      font-size: 1rem; /* Adjust as needed */
+      font-size: 2rem; /* Adjust as needed */
     }
     
+    .main-text h2 {
+      font-size: 1rem; /* Adjust as needed */
+    }
+
     .main-text p {
-      font-size: 2rem; /* Adjust as needed */
+      font-size: 1rem; /* Adjust as needed */
+    }
+
+    .nbilogo img {
+      width: 50%;
+      height: auto;
+    }
+
+    .headimg img {
+      width: 90%;
+      height: auto;
+    }
+
+    .intro {
+      justify-content: center;
+      align-items: center;
+      margin-right: 12%;
+    }
+
+    .intro img {
+      justify-content: center;
+      align-items: center;
+      margin-right: 12%;
     }
   }
   
@@ -206,5 +247,20 @@ body {
   .epic img {
     max-width: 100%;
     height: auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 4px 4px 4px 4px black;
+    border: 2px solid white;
+    border-radius: 10px;
+  }
+
+  .vpic {
+    max-width: 100%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 4px 4px 4px 4px black;
+    border: 2px solid white;
+    border-radius: 10px;
   }
   
